<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logoNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gugi"
        android:text="@string/appNameText"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/idolBtn"
                android:layout_width="380dp"
                android:layout_height="230dp"
                android:layout_marginTop="75dp"
                android:background="@drawable/main_iu"
                android:contentDescription="@string/idolPic"
                android:tintMode="src_atop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#80000000" />

            <TextView
                android:id="@+id/idolText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gugi"
                android:text="@string/mainIdolText"
                android:textColor="@color/mainNameText"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/idolBtn"
                app:layout_constraintTop_toTopOf="@+id/idolBtn" />

            <ImageButton
                android:id="@+id/actorBtn"
                android:layout_width="380dp"
                android:layout_height="230dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/main_actor"
                android:contentDescription="@string/idolPic"
                android:tintMode="src_atop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idolBtn" />

            <TextView
                android:id="@+id/actorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gugi"
                android:text="@string/actorText"
                android:textColor="@color/mainNameText"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/actorBtn"
                app:layout_constraintTop_toTopOf="@+id/actorBtn" />

            <ImageButton
                android:id="@+id/disneyBtn"
                android:layout_width="380dp"
                android:layout_height="230dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/main_disney"
                android:contentDescription="@string/idolPic"
                android:tintMode="src_atop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actorBtn"
                app:tint="#80000000" />

            <TextView
                android:id="@+id/disneyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gugi"
                android:text="@string/disneyText"
                android:textColor="@color/mainNameText"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/disneyBtn"
                app:layout_constraintTop_toTopOf="@+id/disneyBtn" />

            <ImageButton
                android:id="@+id/marvelBtn"
                android:layout_width="380dp"
                android:layout_height="230dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/main_marvel"
                android:contentDescription="@string/idolPic"
                android:tintMode="src_atop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/disneyBtn"
                app:tint="#80000000" />

            <TextView
                android:id="@+id/marvelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gugi"
                android:text="@string/marvelText"
                android:textColor="@color/introExplainColor"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/marvelBtn"
                app:layout_constraintTop_toTopOf="@+id/marvelBtn" />

            <ImageButton
                android:id="@+id/nuisanceBtn"
                android:layout_width="380dp"
                android:layout_height="230dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/main_nuisance"
                android:contentDescription="@string/idolPic"
                android:tintMode="src_atop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marvelBtn"
                app:tint="#80000000" />

            <TextView
                android:id="@+id/nuisanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gugi"
                android:text="@string/nuisanceText"
                android:textColor="@color/mainNameText"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/nuisanceBtn"
                app:layout_constraintTop_toTopOf="@+id/nuisanceBtn" />

            <ImageButton
                android:id="@+id/mugShatBtn"
                android:layout_width="380dp"
                android:layout_height="230dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/main_mugshat"
                android:contentDescription="@string/idolPic"
                android:tintMode="src_atop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nuisanceBtn"
                app:tint="#80000000" />

            <TextView
                android:id="@+id/mugShatText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gugi"
                android:text="@string/mugShat"
                android:textColor="@color/mainNameText"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/mugShatBtn"
                app:layout_constraintTop_toTopOf="@+id/mugShatBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>